@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-31
-Date: 2009-09-23
+Date: 2009-10-06
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
